--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Git start</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header__nav">
+            <div class="container nav__container">
+                <a href="#!" class="header__logo">Logo</a>
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#!" class="header__link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">
+                            Home
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
