add header content and style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="header__nav">
             <div class="container nav__container">
                 <a href="#!" class="header__logo">Logo</a>
+                
                 <ul class="header__list">
                     <li class="header__item">
                         <a href="#!" class="header__link">
@@ -41,6 +42,12 @@
                 </ul>
             </div>
         </nav>
+        <div class="header__content">
+            <div class="container">
+                <h1 class="header__title">Front-end</h1>
+                <p class="header__txt">Developer</p>
+            </div>
+        </div>
     </header>
 </body>
 </html>
